[INT-1512] Upgrade to Gradle 8, accommodate new IT plugin (#385)
* [INT-1512] Upgrade to Gradle 8, accommodate new IT plugin